--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest ${{ env.TEST_DIR }}
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest ${{ env.TEST_DIR }}
